--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.scss
@@ -69,13 +69,13 @@
 
 .no-results-header{
     display: block;
-    font-weight: 500;
-    font-size: 16px;
+    font-weight: 400;
+    font-size: 14px;
   }
   
 .no-results-content{
     display:block;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .form-control{
@@ -95,4 +95,10 @@
 
 .hidden {
     display:none;
+}
+
+.diagnostics-heading{
+    color: black;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
