--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -23,12 +23,13 @@
         </ng-container>
       </div>
     </div> -->
-    <div style="margin:25px 0px;">
+    <!-- style="margin:25px 0px;" -->
+    <div>
       <fabric-search-results></fabric-search-results>
     </div>
   </div>
   <div *ngIf="categories" class="category-container">
-    <div *ngFor="let category of categories" style="display: inline-block;padding: 20px 40px 20px 0px" class="col-md-4">
+    <div *ngFor="let category of categories" style="display: inline-block;padding: 10px 40px 10px 0px" class="col-md-4">
       <category-tile [category]="category"></category-tile>
     </div>
   </div>
