--- a/AngularApp/projects/app-service-diagnostics/src/styles.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles.scss
@@ -117,6 +117,16 @@ fab-command-bar .ms-SearchBox {
     width: 270px;
 }
 
+.ms-Callout-container .root-136 {
+    overflow-y: hidden!important;
+    right: 20px!important;
+    top: 40px!important;
+    padding: 10px!important;
+    left: unset!important;
+    background-color: white!important;
+    width: 270px;
+}
+
 .ms-Callout-container .ms-Callout-main {
     overflow-y: hidden!important;
 }
