--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -156,7 +156,7 @@
             </div>
         </div>
 
-        <div class="list-item-wrapper" *ngIf="allSolutions.length > 0">
+        <!-- <div class="list-item-wrapper" *ngIf="allSolutions.length > 0">
             <div class="stepper-circle stepper-circle-brown">
                 <i aria-hidden="true" class="fa fa-wrench"></i>
             </div>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="list-item-wrapper" *ngIf="successfulViewModels.length > 0">
             <div class="stepper-circle stepper-circle-green">
                 <i aria-hidden="true" class="fa fa-check"></i>
