--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/genie-panel/genie-panel.component.html
@@ -1,66 +1,72 @@
-
-<fab-panel [isOpen]="globals.openGeniePanel" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true"
-[isLightDismiss]="true" [hasCloseButton]="false" [closeButtonAriaLabel]="'close'">
-<div class="row">
-  <!-- <div style="width:5%; margin-top:10px">
+<fab-panel [isOpen]="globals.openGeniePanel" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true" [isLightDismiss]="true"
+  [hasCloseButton]="false" [closeButtonAriaLabel]="'close'">
+  <div class="row">
+    <!-- <div style="width:5%; margin-top:10px">
 <fab-icon iconName="DoubleChevronLeftMed" (click)="closePanel()"></fab-icon>
 </div> -->
-  <div>
-    <div style="margin-bottom: 10px">
-      <div
-        style="position: absolute; left:25px; right: 32px; top:0px; height: 32px; font-family: 'segoe UI'; font-size: 18px; line-height: 24px; font-weight: 600;display: flex; align-items: flex-end">
-        Hi my name is genie</div>
-      <div
-        style="color:#605E5C; position: absolute; left:25px; right: 32px; top:35px; height: 19px; font-family: 'segoe UI'; font-size: 10px; line-height: 14px; display: block">
-        Help bot</div>
-      <div style="position: absolute; top:10px; right: 10px; align-items: flex-end; cursor: pointer; " class="button-container">
-        <!-- <i id="close" class="ms-Icon ms-Icon--Cancel" (click)="closePanel()" aria-hidden="true"></i> -->
-        <div>
-        <i class="fa fa-lg fa-angle-double-right close-button"  (click)="closeGeniePanel()"></i>
+    <div>
+      <div style="margin-bottom: 10px">
+        <div style="position: absolute; left:25px; right: 32px; top:0px; height: 32px; font-family: 'segoe UI'; font-size: 18px; line-height: 24px; font-weight: 600;display: flex; align-items: flex-end">
+          Hi my name is genie</div>
+        <div style="color:#605E5C; position: absolute; left:25px; right: 32px; top:35px; height: 19px; font-family: 'segoe UI'; font-size: 10px; line-height: 14px; display: block">
+          Help bot</div>
+        <div style="position: absolute; top:10px; right: 10px; align-items: flex-end; cursor: pointer; " class="button-container">
+          <!-- <i id="close" class="ms-Icon ms-Icon--Cancel" (click)="closePanel()" aria-hidden="true"></i> -->
+          <div>
+            <i class="fa fa-lg fa-angle-double-right close-button" (click)="closeGeniePanel()"></i>
+          </div>
+          <div class="button-container">
+            <span class="tooltiptext" style="margin-left: -30px;">Collapse</span>
+          </div>
+          <!-- <fab-icon iconName="Cancel" style="float:right" (onClick)="closePanel()"></fab-icon> -->
+        </div>
       </div>
-        <div class="button-container">
-        <span class="tooltiptext" style="margin-left: -30px;">Collapse</span>
-      </div>
-        <!-- <fab-icon iconName="Cancel" style="float:right" (onClick)="closePanel()"></fab-icon> -->
-      </div>
-    </div>
-    <div class="panel-content" style="margin-top: 60px;">
-      <fab-pivot>
-        <fab-pivot-item headerText="Chat" #scrollMe>
-          <!-- <div class="col-md col-sm col-lg" style=" float: left; height: 100%; border-right:1px solid #cccccc; "  (click)="openPanel()">
+      <div class="panel-content" style="margin-top: 60px;" #scrollMe>
+        <!-- <fab-pivot>
+        <fab-pivot-item headerText="Chat" #scrollMe> -->
+        <!-- <div class="col-md col-sm col-lg" style=" float: left; height: 100%; border-right:1px solid #cccccc; "  (click)="openPanel()">
           <i class="fa fa-angle-double-left" style="margin: 5px;font-size:13px;" (click)="closePanel()"></i>
         </div> -->
 
-          <div #scrollMe2 id="scrollme1" [style.height.px]="chatContainerHeight"
-            style="overflow-y: auto; display: inline-block; height: 78vh;"
-            class="ms-Panel-scrollableContent scroll-bottom">
-            <div class="row animated fadeIn chat-message-container" *ngFor="let item of messages"
-              style="margin-left:0px">
-              <!-- " Remove this functionality because we want the critical info to be shown to the customers-->
-              <!-- (onComplete)="scrollToBottom()" not consistent scrolling if this is put there-->
-              <dynamic-component [componentData]="item" (onViewUpdate)="updateView($event)" (onComplete)="updateStatus($event)" ></dynamic-component>
-            </div>
-            <!-- <div class="row animated fadeIn chat-message-container" [hidden]="!showTypingMessage" style="margin-top:10px">
+        <div #scrollMe2 id="scrollme1" [style.height.px]="chatContainerHeight" style="overflow-y: auto; display: inline-block; height: 78vh;"
+          class="ms-Panel-scrollableContent scroll-bottom">
+          <div class="row animated fadeIn chat-message-container" *ngFor="let item of messages" style="margin-left:0px">
+            <!-- " Remove this functionality because we want the critical info to be shown to the customers-->
+            <!-- (onComplete)="scrollToBottom()" not consistent scrolling if this is put there-->
+            <dynamic-component [componentData]="item" (onViewUpdate)="updateView($event)" (onComplete)="updateStatus($event)"></dynamic-component>
+          </div>
+          <!-- <div class="row animated fadeIn chat-message-container" [hidden]="!showTypingMessage" style="margin-top:10px">
               <loading-message></loading-message>
           </div> -->
-          </div>
-        </fab-pivot-item>
+        </div>
+        <!-- </fab-pivot-item>
         <fab-pivot-item headerText="Insights">
           <div></div>
         </fab-pivot-item>
         <fab-pivot-item headerText="History">
           <div></div>
         </fab-pivot-item>
-      </fab-pivot>
-    </div>
+      </fab-pivot> -->
+      </div>
 
-    <div class="chat-search-box" style="position: absolute; bottom: 19px; left: 37px; right: 37px">
-      <!-- <fab-text-field [placeholder]="'Type your question'" [iconProps]="{iconName: 'send'}"></fab-text-field> -->
-      <!-- [iconProps]="{iconName: 'send'}" -->
-      <fab-search-box [placeholder]="'Type your question'" (onSearch)="onSearchEnter($event)"
+      <div class="search-box-container">
+        <!-- <fab-text-field [placeholder]="'Type your question'" [iconProps]="{iconName: 'send'}"></fab-text-field> -->
+        <!-- [iconProps]="{iconName: 'send'}" -->
+        <!-- <fab-search-box [placeholder]="'Type your question'" (onSearch)="onSearchEnter($event)"
         [iconProps]="{iconName: 'send'}" contentStyle="height:31px;border-radius:15px" [value]="searchValue"></fab-search-box>
+         -->
+        <!-- <div class="chat-search-box" style="position: absolute; bottom: 19px; left: 37px; right: 37px">
+          <div class="ms-SearchBox root-66">
+            <div class="ms-SearchBox-iconContainer iconContainer-67" aria-hidden="true">
+              <i data-icon-name="send" role="presentation" aria-hidden="true" class="ms-SearchBox-icon icon-72"></i>
+            </div> -->
+            <input id="genieChatBox" class="genie-search-box" (keydown.enter)="onSearchEnter($event)" placeholder="Type your question" aria-label="Type your question">
+            <span (click)="onSearchEnter($event)" tabindex="0" aria-label="Send Message"><i class="fa fa-paper-plane search-box-icon"></i></span>
+            <!-- </div>
+        </div> -->
+
+      </div>
     </div>
   </div>
-</div>
-<!-- <span>Chat</span> -->
+  <!-- <span>Chat</span> -->
 </fab-panel>
