--- a/AngularApp/projects/app-service-diagnostics/src/styles.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles.scss
@@ -107,15 +107,15 @@ fab-command-bar .ms-SearchBox {
     border-width: 0px!important;
 }
 
-.ms-Callout-container .root-97 {
-    overflow-y: hidden!important;
-    right: 20px!important;
-    top: 40px!important;
-    padding: 10px!important;
-    left: unset!important;
-    background-color: white!important;
-    width: 270px;
-}
+// .ms-Callout-container .root-97 {
+//     overflow-y: hidden!important;
+//     right: 20px!important;
+//     top: 40px!important;
+//     padding: 10px!important;
+//     left: unset!important;
+//     background-color: white!important;
+//     width: 270px;
+// }
 
 .ms-Callout-container .root-136 {
     overflow-y: hidden!important;
