--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="home-container">
-  <div class="input-group input-group-lg search-input-group" (keyup.escape)="clearSearch()" role="search" 
-  *ngIf="this.armService.isPublicAzure || this._resourceService.parseResourceUri(this._resourceService.resourceIdForRouting).provider.toLowerCase() != 'microsoft.containerservice'">
+  <div class="input-group input-group-lg search-input-group" (keyup.escape)="clearSearch()" role="search" *ngIf="!isAKSOnNationalCloud">
     <input tabindex="0" type="search" class="form-control" placeholder="{{searchPlaceHolder}}"
       [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)" (focus)="onSearchBoxFocus(event)"
       (focusout)="onSearchLostFocus()" aria-controls="search-results">
@@ -23,12 +22,12 @@
   <div class="main-area">
     <h2 tabindex="0">{{homePageText.title}}</h2>
     <p id="page-description" tabindex="0">{{homePageText.description}}</p>
-    <div *ngIf="categories && this._resourceService.parseResourceUri(this._resourceService.resourceIdForRouting).provider.toLowerCase() != 'microsoft.containerservice' " class="category-container">
+    <div *ngIf="categories && !isAKSOnNationalCloud " class="category-container">
       <div *ngFor="let category of categories" style="display: inline-block;padding: 20px 40px 20px 0px">
         <category-tile [category]="category"></category-tile>
       </div>
     </div>
-    <markdown ngPreserveWhitespaces *ngIf="!this.armService.isPublicAzure && this._resourceService.parseResourceUri(this._resourceService.resourceIdForRouting).provider.toLowerCase() == 'microsoft.containerservice'">
+    <markdown ngPreserveWhitespaces *ngIf="isAKSOnNationalCloud">
       ## Management
       Cannot stop, start, or edit my Kubernetes containers
 
