--- a/AngularApp/projects/diagnostic-data/src/lib/components/dynamic-insight/dynamic-insight.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/dynamic-insight/dynamic-insight.component.html
@@ -4,17 +4,55 @@
   [class.success-insight-panel]="insight.status === InsightStatus.Success"
   [class.info-insight-panel]="insight.status === InsightStatus.Info">
   <div class="panel-heading">
-    <h5 class="panel-title" [class.clickable-header]="insight.innerDiagnosticData"
-      (click)="insight.expanded = !insight.expanded">
-      <span class="fa status-icon" [class.fa-exclamation-circle]="insight.status === InsightStatus.Critical"
-        [class.fa-exclamation-triangle]="insight.status === InsightStatus.Warning"
-        [class.fa-check-circle]="insight.status === InsightStatus.Success"
-        [class.fa-info-circle]="insight.status === InsightStatus.Info"></span>
-      {{insight.title}}
-      <span class="fa insight-expand-icon" [class.fa-angle-right]="insight.innerDiagnosticData && !insight.expanded"
-        [class.fa-angle-down]="insight.innerDiagnosticData && insight.expanded"></span>
+    <h5 class="panel-title" [class.clickable-header]="insight.innerDiagnosticData" (click)="toggleInsightExpanded(insight)">
+      <div style="display: table;">
+        <div style="display: table-row">
+          <div style="display: table-cell">
+            <span class="fa insight-expand-icon" [class.fa-angle-right]="insight.innerDiagnosticData && !insight.expanded"
+              [class.fa-angle-down]="insight.innerDiagnosticData && insight.expanded"></span>
+          </div>
+          <div style="display: table-cell">
+            <span class="fa status-icon" [class.fa-exclamation-circle]="insight.status === InsightStatus.Critical"
+              [class.fa-exclamation-triangle]="insight.status === InsightStatus.Warning"
+              [class.fa-check-circle]="insight.status === InsightStatus.Success"
+              [class.fa-info-circle]="insight.status === InsightStatus.Info"></span>
+          </div>
+          <div style="display: table-cell;width:100%">
+            {{insight.title}}
+          </div>
+          <div style="display: table-cell">
+            <div class="pull-right" style="white-space: nowrap">
+              <div [ngClass]="{'con-tooltip bottom':!insight.isRated}"
+                class="insight-rating">
+                <a attr.name="Thumbs up for insight: {{insight.title}}" role="button" tabindex="0"
+                  attr.aria-label="Thumbs up for insight: {{insight.title}}"
+                  (click)="setInsightComment(insight, true)" (keyup.enter)="setInsightComment(insight, true)"> <i
+                    class="fa fa-thumbs-o-up fa-lg"
+                    [ngStyle]="{'color':insight.isRated && insight.isHelpful ? 'green': 'gray'}"></i>
+                </a>
+                <div class="tooltip ">
+                  <p>Helpful</p>
+                </div>
+              </div>
+              <div style=" display: inline-block;" [ngClass]="{'con-tooltip bottom':!insight.isRated}"
+                class="insight-rating">
+                <a attr.name="Thumbs down for insight: {{insight.title}}" role="button" tabindex="0"
+                  attr.aria-label="Thumbs down for insight: {{insight.title}}"
+                  (click)="setInsightComment(insight, false)" (keyup.enter)="setInsightComment(insight, false)"> <i
+                    class="fa fa-thumbs-o-down fa-lg"
+                    [ngStyle]="{'color':insight.isRated && !insight.isHelpful ? 'red': 'gray'}"></i>
+                </a>
+                <div class="tooltip ">
+                  <p>Not Helpful</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </h5>
   </div>
+
   <div class="panel-body" *ngIf="insight.expanded">
     <div *ngIf="insight.description" [innerHtml]="insight.description"></div>
     <dynamic-data [diagnosticData]="insight.innerDiagnosticData" [startTime]="startTime" [endTime]="endTime">
