Add sort indicator to right of filter input on column header

--- a/AngularApp/projects/diagnostic-data/src/lib/components/data-table/data-table.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/data-table/data-table.component.scss
@@ -35,7 +35,16 @@
     white-space: pre-wrap;
 }
 
-.column-header {
-    float: left;
-    width: 90%;
+:host ::ng-deep .ngx-datatable {
+    .sortable .sort-btn:before {
+        font-family: data-table;
+        padding-left: 1em;
+        content: "c";
+    }
+    .sortable .sort-btn.datatable-icon-down:before {
+        content: "f";
+    }
+    .sortable .sort-btn.datatable-icon-up:before {
+        content: "e";
+    }
 }
