--- a/AngularApp/projects/diagnostic-data/src/lib/components/data-table/data-table.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/data-table/data-table.component.html
@@ -4,9 +4,8 @@
     <ngx-datatable #myTable class="bootstrap with-shadow"
       [columnMode]="'force'"
       [limit]="rowLimit"
-      [headerHeight]="72"
-      [rowHeight]="35"
       [footerHeight]="0"
+      [scrollbarH]="false"
       [selected]="selected"
       [ngStyle]="currentStyles">
     </ngx-datatable>
@@ -14,10 +13,10 @@
       <pre class="description-text">{{ getValue() }}</pre>
     </div>
   </ng-container>
-  <ng-template #headerTemplate let-column="column" let-sort="sortFn">
-    <input type="text" (keyup)="updateFilter($event, column.prop)" />
-    <br />
-    <span class="column-header" (click)="sort()">{{ column.name }}</span>
+  <ng-template #headerTemplate let-column="column" let-sort="sortFn" >
+    <span (click)="sort()">
+      <input type="text" [placeholder]="column.name" (click)="onInputClicked($event)" (keyup)="updateFilter($event, column.prop)" />
+    </span>
   </ng-template>
 
   <ng-template #groupedTable>
@@ -26,9 +25,8 @@
       [columns]="columns"
       [columnMode]="'force'"
       [limit]="rowLimit"
-      [headerHeight]="72"
-      [rowHeight]="35"
       [footerHeight]="0"
+      [scrollbarH]="false"
       [groupRowsBy]="renderingProperties.groupByColumnName"
       [groupExpansionDefault]="false">
       <ngx-datatable-group-header [rowHeight]="50" #myGroupHeader>
