Auto row height for detector monitoring tab

--- a/AngularApp/projects/diagnostic-data/src/lib/components/data-table/data-table.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/data-table/data-table.component.html
@@ -4,6 +4,7 @@
     <ngx-datatable #myTable class="bootstrap with-shadow"
       [columnMode]="'force'"
       [limit]="rowLimit"
+      [rowHeight]="'auto'"
       [footerHeight]="0"
       [scrollbarH]="false"
       [selected]="selected"
@@ -25,6 +26,7 @@
       [columns]="columns"
       [columnMode]="'force'"
       [limit]="rowLimit"
+      [rowHeight]="'auto'"
       [footerHeight]="0"
       [scrollbarH]="false"
       [groupRowsBy]="renderingProperties.groupByColumnName"
