Add overview icon

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.html
@@ -3,6 +3,7 @@
       <ng-content select=".menu-icon"></ng-content>
       </div>
     <div class="menu-label">
+      <img *ngIf="label == 'Overview'" [src]="overviewImagePath" alt="Overview">
         {{label}}
     </div>
     <div class="menu-expand-icon">
