--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-nav/category-nav.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-nav/category-nav.component.html
@@ -5,15 +5,17 @@
         <!-- <section-divider [label]="'Overview'" [initiallyExpanded]="false" [collapsible]="false"
           (click)="collapsible = !collapsible">
         </section-divider> -->
-        <section-divider *ngIf="!isDiagnosticTools" [label]="'Overview'" [initiallySelected]="false" [collapsible]="false" [routePath]="'overview'"
+        <section-divider [label]="'Overview'" [isOverview]="true" [initiallySelected]="false" [collapsible]="false" [routePath]="'overview'"
           (click)="collapsible = !collapsible">
-          <collapsible-menu-item *ngFor="let detector of detectorList" [menuItem]="detector" [class.selected]="isSelected"></collapsible-menu-item>
+          <collapsible-menu-item *ngFor="let detector of detectorList" [menuItem]="detector"
+            [class.selected]="isSelected"></collapsible-menu-item>
         </section-divider>
         <ng-container *ngIf="isDiagnosticTools">
-      <section-divider *ngFor="let item of toolCategoriesFilteredByStack" [label]=item.item.title>
-        <collapsible-menu-item *ngFor="let tool of item.item.tools" [menuItem]="tool"  [class.selected]="isSelected"></collapsible-menu-item>
-      </section-divider>
-    </ng-container>
+          <section-divider *ngFor="let item of toolCategoriesFilteredByStack" [label]=item.item.title [routePath]=item.item.title>
+            <collapsible-menu-item *ngFor="let tool of item.item.tools" [menuItem]="tool" [class.selected]="isSelected">
+            </collapsible-menu-item>
+          </section-divider>
+        </ng-container>
       </div>
     </div>
   </section>
