--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.scss
@@ -16,12 +16,13 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-    margin-left: 24px;
-    margin-right:24px;
+    // margin-left: 24px;
+    // margin-right:24px;
 }
 
 .section-divider.selected {
-    background-color: #edebe9;
+ //   background-color: #edebe9;
+ //background-color: #adadad!important;
 }
 
 /* DARK THEME */
@@ -41,12 +42,29 @@
     border-bottom: 1px solid #ccc;
 }
 
+// :host-context(.light-theme) .section-divider {
+//     color: #252525;
+//     background-color: #ffffff;
+//     font-weight: 600;
+//     font-size: 10px;
+//     padding: 20px 25px 7px 10px;
+// }
+
+
 :host-context(.light-theme) .section-divider {
     color: #252525;
     background-color: #ffffff;
     font-weight: 600;
     font-size: 10px;
     padding: 20px 25px 7px 10px;
+}
+
+.section-divider.overview-header {
+    padding: 10px 25px 7px 34px!important;
+}
+
+:host-context(.light-theme) .section-divider.selected {
+    background-color: #edebe9!important;
 }
 
 :host-context(.light-theme) .menu,
@@ -64,4 +82,14 @@
 .menu-expand-icon {
    margin-left: auto;
    margin-right: 0;
+}
+
+.menu-title-icon {
+    width: 15px;
+    height:15px;
+    margin-left: -10px;
+}
+
+.menu-title {
+    padding-left:10px;
 }
