--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.html
@@ -14,7 +14,7 @@
           <div class="feature-icon">
             <div>
               <!-- <i *ngIf="!checkImageExist(feature.name)" class="fa" [ngClass]="feature.featureType.icon"></i> -->
-              <img style="height: 20px;width: 20px;" [src]="getImageUrl(feature.name)" alt="" (error)="imgErrorHandler($event)">
+              <img style="height: 20px;width: 20px;" [src]="generateIconImagePath(feature.id)" alt="">
             </div>
           </div>
           <div class="feature-title">{{feature.name}}</div>
