Remove expandable icon

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.html
@@ -1,5 +1,6 @@
 <div class="section-divider" [class.overview-header]="isOverview" [class.not-expandable]="!collapsible" [class.selected]="isSelected()"
-  (click)="sectionHeaderClick()" (click)="expanded = !expanded">
+  (click)="sectionHeaderClick()" >
+  <!-- (click)="expanded = !expanded" -->
   <div>
     <ng-content select=".menu-icon"></ng-content>
   </div>
@@ -8,12 +9,12 @@
     <span class="menu-title">{{label}}</span>
   </div>
   <div class="menu-expand-icon">
-    <span class="fa section-expand-icon" *ngIf="collapsible" [class.fa-angle-down]="!expanded && !disableExpandIcon"
-      [class.fa-angle-up]="expanded && !disableExpandIcon"></span>
+    <!-- <span class="fa section-expand-icon" *ngIf="collapsible" [class.fa-angle-down]="!expanded && !disableExpandIcon"
+          [class.fa-angle-up]="expanded && !disableExpandIcon"></span> -->
   </div>
 </div>
 <div class="section-children">
-  <div class="expandable-content" [@expand]="'shown'">
+  <div class="expandable-content" [@expand]="collapsible && expanded ? 'shown' : 'hidden'">
     <ng-content select="collapsible-menu-item"></ng-content>
     <ng-content select=".fa-spin "></ng-content>
   </div>
