Separate home component

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.html
@@ -1,3 +1,22 @@
+
+<div  *ngIf="useLegacy else newCategoryTile"  class="category-container" (click)="navigateToCategory()" (keyup.enter)="navigateToCategory()"
+(keyup.space)="navigateToCategory()" tabindex="0" role="button">
+<div class="title-container" [style.background-color]="category.color">
+  {{category.name}}
+</div>
+<div class="category-body">
+  <p>{{category.description}}</p>
+  <div>
+      <span class="keyword-label">Keywords</span>
+      <div class="keywords">
+        <div class="keyword" [style.border-color]="category.color" *ngFor="let keyword of category.keywords">
+          {{keyword}}
+        </div>
+      </div>
+    </div>
+</div>
+</div>
+<ng-template #newCategoryTile>
 <!-- <div class="category-container" (click)="navigateToCategory()" (keyup.enter)="navigateToCategory()" -->
 <div class="category-container" (click)="openBladeDiagnoseCategoryBlade()" (keyup.enter)="openBladeDiagnoseCategoryBlade()"
   (keyup.space)="openBladeDiagnoseCategoryBlade()" tabindex="0" role="button">
@@ -22,3 +41,4 @@
     </div>
   </div>
 </div>
+</ng-template>
