--- a/AngularApp/projects/diagnostic-data/src/lib/components/comm-alert/comm-alert.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/comm-alert/comm-alert.component.html
@@ -40,10 +40,14 @@
               <div class="comm-info-label">Impacted Region(s)</div>
               <div class="comm-info-data">{{impactedRegions}}</div>
           </div>
-          <div style="display:inline-block;vertical-align: top">
+          <div style="display:inline-block;vertical-align: top;width:30%">
               <div class="comm-info-label">Impacted Service(s)</div>
               <div class="comm-info-data">{{impactedServices}}</div>
           </div>
+          <div style="display:inline-block;vertical-align: top;width:30%">
+            <div class="comm-info-label">Incident Tracking Id</div>
+            <div class="comm-info-data"><b>{{commAlertToShow.incidentId}}</b></div>
+        </div>
       </div>
 
       <div class="comm-info-row">
